
= rufus-doric CHANGELOG.txt


== rufus-doric - 0.1.11    not yet released

- model.db.nuke_design_documents available
- custom views x(key) and by_x(x) are both OK


== rufus-doric - 0.1.10    released 2010/05/14

- model attachment :x for properties like attachments (#att and #att=(x))
- model#read(attachment_name)


== rufus-doric - 0.1.9    released 2010/05/13

- model#detach(attachment_name)
- model#attach(attachment_name, data)
- raising ActiveRecord::RecordInvalid if _id is missing or ''
- view, as shortcut for view_by


== rufus-doric - 0.1.8    released 2010/04/16

- view_by 'funcname', 'func' creates a 'funcname' method, not a 'by_funcname'
- ranges must now be specified with :start[key] and/or :end[key]


== rufus-doric - 0.1.7    released 2010/04/16

- view_by 'tysec', "emit(doc.type + '__' + doc.security_level, null);"
- model : view_by [ :x, :y ]  => view_by_x_and_y
- neutralize_id(i) now turns dots to underscores as well
- model : default _id generator (when no _id_field specified)


== rufus-doric - 0.1.6    released 2010/04/14

- property :sold, :default => false was not working. Fixed.


== rufus-doric - 0.1.5    released 2010/04/12

- implemented property :x, :default => 'y'
- added :limit, :skip, :descending, :inclusive_end to by_x and all
- added :limit and :skip to by_xxx methods (absolute and range OK)
- Schedules.by_day([ '20101204', '20110105' ]) by range implemented


== rufus-doric - 0.1.4    released 2010/04/09

- adapted to rails3 beta2


== rufus-doric - 0.1.3    released 2010/04/06

- Rufus::Doric::Value now has h_shortcut
- some kind of full-text indexing (.text_index / .texts) for Model
- preventing infinite loop when doing Model.by_x and db is not created


== rufus-doric - 0.1.2    released 2010/03/23

- person.belongings() returns all the object whose person_id is person._id
- multi-class associations : owner.vehicles.collect &class #=> [ Car, Boat ]
- introduced the Rufus::Doric.types hash ({ 'car' => MyDomain::Car })